--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 <body>
   <div class="container">
     <div class="main">
-      <h1>Node Unblocker</h1>
+      <h1>网址导览</h1>
       <div id="error"></div>
       <form action="no-js" method="get" id="unblocker-form">
         <p>
@@ -74,7 +74,7 @@
           <input type="submit" value="浏览"/>
         </p>
       </form>
-      <h3><center>禁网导航</center></h3>
+      <h3><center>网址导览</center></h3>
 	  <h4>实用工具</h4>
 		<a href="./proxy/https://www.google.com/" target="_blank">Google搜索</a>
 		<a href="./proxy/https://zh.wikipedia.org/" target="_blank">维基百科</a>
