--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
       <h3><center>网址导览</center></h3>
 	  <h4>实用工具</h4>
 		<a href="./proxy/https://www.google.com/" target="_blank">Google搜索</a>
+		<a href="./proxy/https://www.youtube.com/" target="_blank">优兔</a>
 		<a href="./proxy/https://zh.wikipedia.org/" target="_blank">维基百科</a>
 		<a href="https://github.com/" target="_blank">GitHub</a>
 		<a href="https://www.baidu.com/" target="_blank">百度</a>
